--- a/IHM/KDMUSIQUE/album.html
+++ b/IHM/KDMUSIQUE/album.html
@@ -109,36 +109,36 @@
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/vietnam/bigcityboi.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Bigcityboi</div>
+                                <div class="chanteur">Binz</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/vietnam/Chay_ngay_di.png" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Chạy Ngay Đi</div>
+                                <div class="chanteur">Sơn Tùng M-TP</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/vietnam/di_cung_em_minh_vuong.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Đi Cùng Em</div>
+                                <div class="chanteur">Minh Vương</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/vietnam/di_du_dua_di.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Đi Đu Đưa Đi</div>
+                                <div class="chanteur">Bích Phương</div>
                             </a>
                         </div>
                     </div>
@@ -147,36 +147,36 @@
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/vietnam/hon_ca_yeu_duc_phuc.jfif" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Hơn Cả Yêu</div>
+                                <div class="chanteur">Đức Phúc</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/vietnam/khac_biet_to_lon_trinh_thang_binh.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Khác Biệt To Lớn</div>
+                                <div class="chanteur">Trịnh Thăng Bình</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/vietnam/loi_nho.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Lối Nhỏ</div>
+                                <div class="chanteur">Đen Vâu</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/vietnam/thich_thi_den_le_bao_binh.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Thích Thì Đến</div>
+                                <div class="chanteur">Lê Bảo Bình</div>
                             </a>
                         </div>
                     </div>
@@ -190,36 +190,36 @@
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/kpop/As_if_it's_your_last_blackpink.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">As If It's Your Last</div>
+                                <div class="chanteur">Blackpink</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/kpop/Bad_boy_red_velvet.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Bad Boy</div>
+                                <div class="chanteur">Red Velvet</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/kpop/Ddu-du-du.png" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Ddu-du-du</div>
+                                <div class="chanteur">Blackpink</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/kpop/Gotta_go_chung_ha.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Gotta Go</div>
+                                <div class="chanteur">Chung Ha</div>
                             </a>
                         </div>
                     </div>
@@ -228,36 +228,36 @@
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/kpop/love_scenario_iKON.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Love Scenario</div>
+                                <div class="chanteur">iKON</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/kpop/Peek_a_boo_Red_velvet.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Peek A Boo</div>
+                                <div class="chanteur">Red Velvet</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/kpop/Psycho_red_velvet.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Psycho</div>
+                                <div class="chanteur">Red Velvet</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/kpop/What_is_love_twice.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">What Is Love</div>
+                                <div class="chanteur">TWICE</div>
                             </a>
                         </div>
                     </div>
@@ -280,26 +280,26 @@
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/Reputation_Taylor.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Reputation</div>
+                                <div class="chanteur">Taylor Swift</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/sorry.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Sorry</div>
+                                <div class="chanteur">Justin Bieber</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
+                                <img src="icon/sunflower.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Sunflower</div>
                                 <div class="chanteur">Post Malone</div>
                             </a>
                         </div>
@@ -309,36 +309,36 @@
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/Team_Lorde.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Team</div>
+                                <div class="chanteur">Lorde</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/when_im_gone.jpg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">When I'm Gone</div>
+                                <div class="chanteur">Eminem</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/young.jpeg" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Young</div>
+                                <div class="chanteur">The Chainsmokers</div>
                             </a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="album">
                             <a href="#">
-                                <img src="images/circle.png" alt="circle" height="200" width="200">
-                                <div class="nomDeAlbum">Circles</div>
-                                <div class="chanteur">Post Malone</div>
+                                <img src="icon/sing.png" alt="circle" height="200" width="200">
+                                <div class="nomDeAlbum">Sing</div>
+                                <div class="chanteur">Ed Sheeran</div>
                             </a>
                         </div>
                     </div>
