--- a/IHM/KDMUSIQUE/index.html
+++ b/IHM/KDMUSIQUE/index.html
@@ -119,27 +119,27 @@
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/kids_in_love.jpg" alt="circle" >
+                                            <div class="nomDeAlbum">Kids In Love</div>
+                                            <div class="chanteur">Kygo</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/let_her_go.jpg" alt="circle" >
+                                            <div class="nomDeAlbum">Let Her Go</div>
+                                            <div class="chanteur">Passenger</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/rude_magic.jpg" alt="circle" >
+                                            <div class="nomDeAlbum">Rude</div>
+                                            <div class="chanteur">Magic!</div>
                                         </a>
                                     </div>
                                 </div>
@@ -151,8 +151,8 @@
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
+                                            <img src="icon/sunflower.jpg" alt="circle" >
+                                            <div class="nomDeAlbum">Sunflower</div>
                                             <div class="chanteur">Post Malone</div>
                                         </a>
                                     </div>
@@ -160,27 +160,27 @@
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/Team_Lorde.jpg" alt="circle" >
+                                            <div class="nomDeAlbum">Team</div>
+                                            <div class="chanteur">Lorde</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/when_im_gone.jpg" alt="circle" >
+                                            <div class="nomDeAlbum">When I'm Gone</div>
+                                            <div class="chanteur">Eminem</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/silence.jpg" alt="circle" >
+                                            <div class="nomDeAlbum">Silence</div>
+                                            <div class="chanteur">Marshmello</div>
                                         </a>
                                     </div>
                                 </div>
@@ -210,36 +210,36 @@
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/sing.png" alt="circle" >
+                                            <div class="nomDeAlbum">Sing</div>
+                                            <div class="chanteur">Ed Sheeran</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/sorry.jpg" alt="circle" >
+                                            <div class="nomDeAlbum">Sorry</div>
+                                            <div class="chanteur">Justin Bieber</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/young.jpeg" alt="circle" >
+                                            <div class="nomDeAlbum">Young</div>
+                                            <div class="chanteur">The Chainsmokers</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle">
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/death_bed.jpg" alt="circle">
+                                            <div class="nomDeAlbum">Death Bed</div>
+                                            <div class="chanteur">Powfu</div>
                                         </a>
                                     </div>
                                 </div>
@@ -250,36 +250,36 @@
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/bad_liar.jpg" alt="circle" >
+                                            <div class="nomDeAlbum">Bad Liar</div>
+                                            <div class="chanteur">Imagine Dragons</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/Hey_brother.jpg" alt="circle" >
+                                            <div class="nomDeAlbum">Hey Brother</div>
+                                            <div class="chanteur">Avicii</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/Funny.jpg" alt="circle" >
+                                            <div class="nomDeAlbum">Funny</div>
+                                            <div class="chanteur">Zedd</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle">
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/Reputation_Taylor.jpg" alt="circle">
+                                            <div class="nomDeAlbum">Reputation</div>
+                                            <div class="chanteur">Taylor Swift</div>
                                         </a>
                                     </div>
                                 </div>
@@ -309,7 +309,7 @@
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle"  style="border-radius:48%">
+                                            <img src="icon/post_malone.jpg" alt="circle"  style="border-radius:48%">
                                             <div class="chanteur">Post Malone</div>
                                         </a>
                                     </div>
@@ -317,24 +317,24 @@
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle"  style="border-radius:48%">
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/ed_sheeran.jfif" alt="circle"  style="border-radius:48%">
+                                            <div class="chanteur">Ed Sheeran</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle"  style="border-radius:48%">
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/taylor.jpg" alt="circle"  style="border-radius:48%">
+                                            <div class="chanteur">Taylor Swift</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" style="border-radius:48%">
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/zedd.jpg" alt="circle" style="border-radius:48%">
+                                            <div class="chanteur">Zedd</div>
                                         </a>
                                     </div>
                                 </div>
@@ -345,32 +345,32 @@
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" style="border-radius:48%" >
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/the_chainsmokers.webp" alt="circle" style="border-radius:48%" >
+                                            <div class="chanteur">The Chainsmokers</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" style="border-radius:48%" >
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/imagine_dragon.jfif" alt="circle" style="border-radius:48%" >
+                                            <div class="chanteur">Imagine Dragons</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
-                                            <img src="images/circle.png" alt="circle" style="border-radius:48%">
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/justin_bieber.jpg" alt="circle" style="border-radius:48%">
+                                            <div class="chanteur">Justin Bieber</div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="artistes.html">
-                                            <img src="images/circle.png" alt="circle" style="border-radius:48%">
-                                            <div class="chanteur">Post Malone</div>
+                                            <img src="icon/marshmello.jpg" alt="circle" style="border-radius:48%">
+                                            <div class="chanteur">Marshmello</div>
                                         </a>
                                     </div>
                                 </div>
