--- a/IHM/KDMUSIQUE/playlist.html
+++ b/IHM/KDMUSIQUE/playlist.html
@@ -138,43 +138,43 @@
                 <div class="wrap-list-recommandations">
                     <label>Recommandations</label>
                     <div class="wrap-recommandations">
-                        <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
+                        <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="row">
                                         <div class="col">
                                             <div class="album">
                                                 <a href="#">
-                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
-                                                    <div class="nomDeAlbum">Circles</div>
-                                                    <div class="chanteur">Post Malone</div>
+                                                    <img src="icon/rude_magic.jpg" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Rude</div>
+                                                    <div class="chanteur">Magic</div>
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="album">
                                                 <a href="#">
-                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
-                                                    <div class="nomDeAlbum">Circles</div>
-                                                    <div class="chanteur">Post Malone</div>
+                                                    <img src="icon/silence.jpg" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Silence</div>
+                                                    <div class="chanteur">Marshmello</div>
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="album">
                                                 <a href="#">
-                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
-                                                    <div class="nomDeAlbum">Circles</div>
-                                                    <div class="chanteur">Post Malone</div>
+                                                    <img src="icon/sorry.jpg" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Sorry</div>
+                                                    <div class="chanteur">Justin Bieber</div>
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="album">
                                                 <a href="#">
-                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
-                                                    <div class="nomDeAlbum">Circles</div>
-                                                    <div class="chanteur">Post Malone</div>
+                                                    <img src="icon/Team_Lorde.jpg" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Team</div>
+                                                    <div class="chanteur">Lorde</div>
                                                 </a>
                                             </div>
                                         </div>
@@ -185,47 +185,47 @@
                                         <div class="col">
                                             <div class="album">
                                                 <a href="#">
-                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
-                                                    <div class="nomDeAlbum">Circles</div>
-                                                    <div class="chanteur">Post Malone</div>
+                                                    <img src="icon/when_im_gone.jpg" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">When I'm Gone</div>
+                                                    <div class="chanteur">Eminem</div>
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="album">
                                                 <a href="#">
-                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
-                                                    <div class="nomDeAlbum">Circles</div>
-                                                    <div class="chanteur">Post Malone</div>
+                                                    <img src="icon/young.jpeg" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Young</div>
+                                                    <div class="chanteur">The Chainsmokers</div>
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="album">
                                                 <a href="#">
-                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
-                                                    <div class="nomDeAlbum">Circles</div>
-                                                    <div class="chanteur">Post Malone</div>
+                                                    <img src="icon/bad_liar.jpg" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Bad Liar</div>
+                                                    <div class="chanteur">Imagine Dragons</div>
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="album">
                                                 <a href="artistes.html">
-                                                    <img src="images/circle.png" alt="circle" style="width: 150px;">
-                                                    <div class="nomDeAlbum">Circles</div>
-                                                    <div class="chanteur">Post Malone</div>
+                                                    <img src="icon/Funny.jpg" alt="circle" style="width: 150px;">
+                                                    <div class="nomDeAlbum">Funny</div>
+                                                    <div class="chanteur">Zedd</div>
                                                 </a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <a class="carousel-control-prev" href="#carouselExampleControls1" role="button" data-slide="prev">
+                            <a class="carousel-control-prev" href="#carouselExampleControls3" role="button" data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true" id="btnprev"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next" href="#carouselExampleControls1" role="button" data-slide="next">
+                            <a class="carousel-control-next" href="#carouselExampleControls3" role="button" data-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true" id="btnnext"></span>
                                 <span class="sr-only">Next</span>
                             </a>
